kubernetes-training/Ingress/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  # namespace: guineeapps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
        - name: demo-app
          image: nginx
          imagePullPolicy: Always
          #env:
          #  - name: JAVA_OPTS
          #    value: -Djenkins.install.runSetupWizard=false
          # resources:
          #   requests:
          #     memory: "4G"
          #     cpu: "1000m"
          #   limits:
          #     memory: "6G"
          #     cpu: "2000m"
          ports:
            - name: http
              containerPort: 80
      #     volumeMounts:
      #       - name: demo-app-pv-volume
      #         mountPath: /data
      # volumes:
      #   - name: demo-app-pv-volume
      #     persistentVolumeClaim:
      #       claimName: demo-app-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  name: demo-app-service
  # namespace: guineeapps
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80 # port of the container
      protocol: TCP
      nodePort: 31000
  selector:
    app: demo-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: demo-app-ingress  
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: gitea.rougeo.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-app-service
            port:
              number: 80
